--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,13 @@
     <string name="app_name">ContactLensManagement</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_adding">Add</string>
 
     <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
     <string name="start_level">Level 1</string>
     <string name="next_level">Next Level</string>
+    <string name="hint_add_contact_name">Input Contact Lens Name</string>
+    <string name="button_add">Add</string>
     <!-- -
         This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
