--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">ContactLensManagement</string>
 
     <string name="action_settings">Settings</string>
-    <string name="action_adding">Add</string>
+    <string name="action_adding_contact_master">Add Contact Lens</string>
+    <string name="action_adding_limit_master">Add Limit Type</string>
 
     <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
     <string name="start_level">Level 1</string>
@@ -10,11 +11,20 @@
     <string name="hint_add_contact_name">Input Contact Lens Name</string>
     <string name="button_add">Add</string>
 
-    <string name="info_success_adding_master">Adding master data Successful.</string>
+    <string name="info_success_adding_master">Adding master data is Successful.</string>
+    <string name="info_failure_adding_master">Adding master data is Failure.</string>
 
     <!-- -
         This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="left_eye">Left Eye</string>
+    <string name="right_eye">Right Eye</string>
+    <string name="remaining_date">Remaining Date</string>
+    <string name="end_date">End Date</string>
+    <string name="button_finish_right_contact_lens">Finish right ContactLens</string>
+    <string name="finish_left_contact_lens">Finish left ContactLens</string>
+    <string name="nothing">Nothing</string>
+    <string name="hint_add_limit_of_contact">Input limit days of Contact. ex. 30, 14, 7, 1…etc.</string>
 </resources>
